--- a/res/layout/activity_settings_dhsq.xml
+++ b/res/layout/activity_settings_dhsq.xml
@@ -55,7 +55,7 @@
             android:textColor="@color/black"
             android:textSize="@dimen/content_fontsize" />
         <ImageButton
-            android:id="@+id/dian_hua_shou_quan"
+            android:id="@+id/imabtn_dhsq"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
