--- a/res/layout/row_received_picture.xml
+++ b/res/layout/row_received_picture.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:zhy="http://schemas.android.com/apk/res-auto"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingTop="13dp" >
@@ -12,20 +13,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <RelativeLayout
+   <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_chat_activity" >
 
-        <ImageView
+      
+        
+        <com.xicheng.trid.progressbar.RoundProgressBarWidthNumber
             android:id="@+id/iv_userhead"
             android:layout_width="@dimen/size_avatar"
             android:layout_height="@dimen/size_avatar"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="@dimen/margin_chat_activity"
-            android:background="@drawable/mini_avatar_shadow"
-            android:scaleType="fitXY" />
+            android:background="#00000000"          
+            android:layout_marginLeft="10dp"
+            android:progress="70"
+            zhy:progress_text_color="@color/chat_avatar"
+            zhy:progress_text_size="12sp"
+            zhy:progress_unreached_color="@color/loveme_unreach"
+            zhy:progress_reached_color="@color/loveme_reach"
+            zhy:pg_radius="25dp" />
 
         <RelativeLayout
             android:id="@+id/row_recv_pic"
